Completed the sorted priority queue implementation.